# secretsauce

./: .env.local  Dockerfile  LICENSE  README.md  pyproject.toml
scripts/: build_and_tag.sh  push.sh  run-local.sh
secretsauce/: main.py
