[tool.poetry]
name = "secretsauce"
version = "0.1.0"
description = "This gives the secret"
authors = ["0i0 <liorhakim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
